Fix focus method in mobile-nav & background on mobile devices

--- a/style.css
+++ b/style.css
@@ -358,7 +358,7 @@ display: none;
   .main-body {
     background: url('img/background-mb.png');
     background-position: 50% 50%;
-    background-size: 100% 120%;
+    background-size: 100% 128%;
     background-attachment: initial;
   }
 
